# ai-toolbox

./: .gitignore  LICENSE  README.md  pyproject.toml  review.json  review.md
docs/: cli.md  commands.md  contributing.md  index.md
src/ai_toolbox/: __init__.py  git_utils.py  main.py  tool_registry.py  tool_utils.py
src/ai_toolbox/commands/: __init__.py  commit.py  review.py
src/ai_toolbox/commands/review/: __init__.py  cli.py  helpers.py  interfaces.py  prompts.py
tests/: __init__.py  test_analyze_helpers.py  test_commit.py  test_git_utils.py  test_logging.py  test_main.py  test_review.py  test_review_cli_output.py  test_review_interfaces.py  test_review_logic_template.py  test_review_personas.py  test_review_pipeline_personas.py  test_review_syntax_template.py  test_review_types.py  test_self_critique.py  test_tool_registry.py  test_tool_utils.py
